--- a/src/main/gui/inserimento_cliente.ui
+++ b/src/main/gui/inserimento_cliente.ui
@@ -377,6 +377,12 @@ font:  bold 11px
       <height>22</height>
      </rect>
     </property>
+    <property name="displayFormat">
+     <string>M/d/yyyy</string>
+    </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
