--- a/src/main/gui/visualizza_utente.ui
+++ b/src/main/gui/visualizza_utente.ui
@@ -36,7 +36,7 @@
      <rect>
       <x>50</x>
       <y>231</y>
-      <width>100</width>
+      <width>50</width>
       <height>13</height>
      </rect>
     </property>
@@ -57,20 +57,10 @@
      <string>Username:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>105</y>
-      <width>55</width>
-      <height>13</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Password:</string>
-    </property>
-   </widget>
    <widget class="QCheckBox" name="clienti_check">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>120</x>
@@ -84,6 +74,9 @@
     </property>
    </widget>
    <widget class="QCheckBox" name="servizi_check">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>120</x>
@@ -97,6 +90,9 @@
     </property>
    </widget>
    <widget class="QCheckBox" name="turni_check">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>270</x>
@@ -136,6 +132,9 @@
     </property>
    </widget>
    <widget class="QCheckBox" name="utenti_check">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>270</x>
@@ -148,7 +147,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="annulla_button">
+   <widget class="QPushButton" name="indietro_button">
     <property name="geometry">
      <rect>
       <x>200</x>
@@ -183,7 +182,7 @@ font:  bold 11px
      <rect>
       <x>200</x>
       <y>200</y>
-      <width>80</width>
+      <width>50</width>
       <height>13</height>
      </rect>
     </property>
@@ -192,6 +191,9 @@ font:  bold 11px
     </property>
    </widget>
    <widget class="QCheckBox" name="mezzi_check">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>270</x>
@@ -209,7 +211,7 @@ font:  bold 11px
      <rect>
       <x>50</x>
       <y>201</y>
-      <width>80</width>
+      <width>50</width>
       <height>13</height>
      </rect>
     </property>
@@ -231,6 +233,9 @@ font:  bold 11px
     </property>
    </widget>
    <widget class="QCheckBox" name="operatori_check">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>120</x>
@@ -246,7 +251,7 @@ font:  bold 11px
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="salva_button">
+   <widget class="QPushButton" name="modifica_button">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -276,25 +281,12 @@ font:  bold 11px
      <string>MODIFICA</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_10">
+   <widget class="QLabel" name="username_label">
     <property name="geometry">
      <rect>
       <x>120</x>
       <y>65</y>
-      <width>100</width>
-      <height>13</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_11">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>105</y>
-      <width>100</width>
+      <width>220</width>
       <height>13</height>
      </rect>
     </property>
@@ -320,7 +312,7 @@ font:  bold 11px
      <rect>
       <x>120</x>
       <y>25</y>
-      <width>100</width>
+      <width>220</width>
       <height>13</height>
      </rect>
     </property>
