--- a/src/main/gui/inserimento_mezzo.ui
+++ b/src/main/gui/inserimento_mezzo.ui
@@ -110,6 +110,9 @@ font:  bold 11px
       <height>22</height>
      </rect>
     </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="inserisci_button">
     <property name="geometry">
@@ -192,12 +195,12 @@ font:  bold 11px
      <rect>
       <x>20</x>
       <y>105</y>
-      <width>80</width>
-      <height>13</height>
+      <width>81</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Funzione:</string>
+     <string>Allestimento:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_7">
