--- a/src/main/gui/visualizza_mezzo.ui
+++ b/src/main/gui/visualizza_mezzo.ui
@@ -122,8 +122,8 @@ font:  bold 11px
      <rect>
       <x>20</x>
       <y>105</y>
-      <width>47</width>
-      <height>13</height>
+      <width>61</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
@@ -135,8 +135,8 @@ font:  bold 11px
      <rect>
       <x>20</x>
       <y>225</y>
-      <width>80</width>
-      <height>13</height>
+      <width>121</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
@@ -200,15 +200,15 @@ font:  bold 11px
      <rect>
       <x>20</x>
       <y>185</y>
-      <width>100</width>
-      <height>13</height>
+      <width>121</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>Fine iscrizione Albo:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="funzione_label">
+   <widget class="QLabel" name="allestimento_label">
     <property name="geometry">
      <rect>
       <x>170</x>
@@ -244,7 +244,7 @@ font:  bold 11px
      </rect>
     </property>
     <property name="text">
-     <string>Funzione:</string>
+     <string>Allestimento:</string>
     </property>
    </widget>
    <widget class="QLabel" name="stato_label">
