Creazione Turno e MapperTurni

--- a/src/main/gui/visualizza_mezzo.ui
+++ b/src/main/gui/visualizza_mezzo.ui
@@ -31,7 +31,7 @@
      <string>Targa:</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="annulla_button">
+   <widget class="QPushButton" name="indietro_button">
     <property name="geometry">
      <rect>
       <x>200</x>
